@@ -14,6 +14,20 @@ WriteMakefile(
         'IPC::Open3' => 0,
         'IO::Handle' => 0,
     },
-    dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
-    clean => { FILES    => 'IPC-Open3-Utils-*' },
+    dist     => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
+    clean    => { FILES    => 'IPC-Open3-Utils-*' },
+    META_ADD => {
+        'meta-spec'    => { version => 2 },
+        dynamic_config => 0,
+        resources      => {
+            repository => {
+                url  => 'https://github.com/drmuey/p5-IPC-Open3-Utils.git',
+                web  => 'https://github.com/drmuey/p5-IPC-Open3-Utils',
+                type => 'git',
+            },
+            bugtracker => {
+                web => 'https://github.com/drmuey/p5-IPC-Open3-Utils/issues',
+            },
+        },
+    },
 );
